--- a/source/partials/snippets/_footer.erb
+++ b/source/partials/snippets/_footer.erb
@@ -1,6 +1,6 @@
 <footer class="section-article container-color--gray-gradient main-footer">
     <div class="row small-up-2 medium-up-3 large-up-5">
-        <% data.footer_main.each do |f| %>
+        <% data.nav_all.each do |f| %>
             <div class="column group">
                 <h5 class="headline-6"><%= f["title"] %></h5>
                 <ul class="no-bullet">
