--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -38,7 +38,7 @@ layout: company
                     <p>By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.</p>
                 </div>
                 <div class="block">
-                    <img class="hlseven-logo" src="https://images.ctfassets.net/189dvqdsjh46/4YL9rurq768KqacKu6Wouy/7ced63f7c3c07ca11604fa436e32efcf/hl7-membership-gold.png" alt="HL7 Logo">
+                    <img class="hlseven-logo" src="https://images.ctfassets.net/189dvqdsjh46/5iceTCKPTaG608mQqyY4YC/ea3d524a5e1788cadf61a0474ae6d446/cncf-stacked-color.png" alt="CNCF Logo">
                     <h4 class="inline-highlight">How We Create Value</h4>
                     <h2>Compliance Breeds Innovation</h2>
                     <p>When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.</p>
@@ -152,6 +152,13 @@ layout: company
                     <span class="dot"></span>
                     <div class="content">
                         Datica <a href="/press-release/datica-celebrates-5th-anniversary-as-a-cloud-compliance-and-security-leader/" title="Read the press release">Celebrates 5th anniversary</a> as a compliance and security leader for the cloud.
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="date"><span>June 2018</span></div>
+                    <span class="dot"></span>
+                    <div class="content">
+                        Datica joins the Cloud Native Computing Foundation.
                     </div>
                 </div>
             </div>
