--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -40,7 +40,9 @@
       @include shadow-anarchy(0 rem-calc(10px) rem-calc(30px) 0 rgba(0,0,0,0.4));
     }
 }
-
+.text-shadow {
+    text-shadow: 1px 2px 4px black(0.4);
+}
 
 .full-height {
     height: 100%; // for items within a flexbox grid - equal height objects
