--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -30,27 +30,33 @@ ruby:
     else
         current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/NL2SgI83KesMS86cWO44y/e908972bb9193eec594b639881e25e6f/academy-share-default.jpg" + image_size_small
     end
+    bg_default = "https://images.ctfassets.net/189dvqdsjh46/42ucBFmGx2ek0C8IWU6CiC/2177ddcfa81da18bd83f49c4e1232f84/webinar-bg-default.svg"
     if p.has_key?("image_thumb")
         row_align = "align-center"
         col_offset = nil
+        thumb = p["image_thumb"]["url"]
     else
         row_align = "align-left"
         col_offset = "large-offset-1"
+        thumb = bg_default
     end
 
-section.container-gray-2#top
+/ section#top.container-gray-2.container-image-fill data-interchange="[#{thumb}, small], [#{thumb}#{image_featured_large}, large]"
+section.container-gray-11.relative
+    .absolute.z-stack-zero.container-image-fill data-interchange="[#{thumb}, small], [#{thumb}#{image_featured_large}, large]" style=";"
+
     .container-color--tint-20.faded-max.group
         = partial "partials/head/header", :locals => { :style => "light" }
-    .row.align-middle.align-center
+    .row.align-middle.align-center.relative
         .columns.small-12.medium-6.xlarge-6
             /= partial "partials/snippets/button", :locals => { :label => "Get your free report", :url => "#report-form", :button_classes => "button success hide-for-medium-large", :icon => "icon-download", :icon_color => "black" }
             .headline-5.subhead--spaced.faded.show-for-large
                 = (p.has_key?("subhead") ? p.subhead : "Datica Webinars")
             h1.headline-3.text-strong
                 = p.title
-        - if p.has_key?("image_thumb")
-            .columns.small-12.medium-6.xlarge-6.text-center
-                img.video-preview(data-interchange="[#{p.image_thumb.url}?w=640, small], [#{p.image_thumb.url}?w=800, medium]" alt="Datica Guide: #{p.title}")
+        / - if p.has_key?("image_thumb")
+        /     .columns.small-12.medium-6.xlarge-6.text-center
+        /         img.video-preview(data-interchange="[#{p.image_thumb.url}?w=640, small], [#{p.image_thumb.url}?w=800, medium]" alt="Datica Guide: #{p.title}")
 section.section-article--med.container-gray-11
     .row
         .columns.small-12.medium-large-6.xlarge-6.group--2x
@@ -72,7 +78,7 @@ section.section-article--med.container-gray-11
             .callout.drop
                 - if p.has_key?("related_form")
                     h3.headline-4.text-center.group Get Your #{p.related_form.title}
-                    = Kramdown::Document.new(p["related_form"]["custom_form"]).to_html
+                    = Kramdown::Document.new(data.site.forms[p.related_form.id].custom_form).to_html
 
 - if p.has_key?("bg_image")
     section.show-for-medium.section-article.container-image-fill data-interchange="[#{p.bg_image.url}?fit=thumb&w=1800&h=400&fm=jpg&q=50, medium]"
