--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -21,7 +21,7 @@ ruby:
     section.section-article--med
         .row.align-center
             .columns.small-12.large-6.text-center.group
-                = inline_svg("icon-book-academy", class: "icon-size--medium")
+                = inline_svg("icon-webinar", class: "icon-size--large")
                 / h3.headline-5.spaced-out
                     / = inline_svg("small/icon-book-fill", class: "icon-inline icon-left")
                     | Datica Webinars
