Prepping for partializing this card thingy, will be useful elsewhere

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -154,6 +154,9 @@
     &-serif {
         font-family: $font_serif;
     }
+    &-italic {
+        font-style: italic;
+    }
 }
 
 // normally containers set child colors, when possible; when not, use these link color overrides.
