--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -31,8 +31,8 @@ ruby:
             - if webinar_entry.has_key?("image_thumb") ? thumb = webinar_entry.image_thumb.url : thumb = bg_default
             .row.align-center
                 - unless thumb == nil
-                    .columns.small-12.medium-8.large-6
-                        a.preview.container-gray-3.container-image-fill href="/webinars/#{webinar_entry["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
+                    .columns.small-12.large-6
+                        a.preview.group.container-gray-3.container-image-fill href="/webinars/#{webinar_entry["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
                             div.preview-subhead Datica Webinar
                             .preview-title
                                 h2.headline-3 = webinar_entry["title"]
@@ -44,10 +44,10 @@ ruby:
                                     li
                                         span.label.info.round = data.site.discover[webinar_entry.discovery_topic.id].title
 
-                            .preview-cta.headline-5.spaced-out Register now
+                            .preview-cta.headline-5.spaced-out.show-for-large Register now
                             = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
                             / img.thumbnail.float-left(src="#{thumb}?fit=scale&w=640" alt="webinar Preview")
-                .columns.small-12.medium-4.large-6
+                .columns.small-12.large-6
                     .lead
                         = Kramdown::Document.new(webinar_entry["summary"]).to_html
                     - if webinar_entry.has_key?("authors")
@@ -60,27 +60,62 @@ section.section-article.container-gray-11
     .row.align-center.group
         .columns.small-12.text-center
             h2.headline-5.spaced-out Archived Webinars
-    .row.align-center.group.small-up-1.medium-up-2.xlarge-up-3
-        - sorted_entries[1...4].each do | id, webinar_entry |
-            - if webinar_entry.has_key?("image_thumb") ? thumb = webinar_entry.image_thumb.url : thumb = bg_default
-            .column
-                .card.drop
-                    .card-section.container-gray-3.container-image-fill href="/webinars/#{webinar_entry["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
+    - sorted_entries[1...5].each do | id, webinar_entry |
+        - if webinar_entry.has_key?("image_thumb") ? thumb = webinar_entry.image_thumb.url : thumb = bg_default
+        .row.align-center.group
+            - unless thumb == nil
+                .columns.small-12.medium-8.large-5
+                    a.preview.container-gray-3.container-image-fill href="/webinars/#{webinar_entry["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
+                        div.preview-subhead Datica Webinar
                         .preview-title
-                            h3.headline-4.text-shadow = webinar_entry["title"]
-                            .menu.simple.margin-bottom-small.text--white.text-shadow
-                                = partial "entry-meta", :locals => { :entry => webinar_entry }
-                    .card-section.text-small 
-                        = Kramdown::Document.new(webinar_entry["summary"]).to_html
-                        - if webinar_entry.has_key?("authors")
-                            aside.group
-                                .pub-date.spaced-out Presented by
-                                - webinar_entry["authors"].each do | author |
-                                    p
-                                        = partial("partials/snippets/person-small", :locals => { :p => author })
-                        = partial "partials/snippets/button", :locals => { :label => "Watch Webinar", :url => "/webinars/#{webinar_entry["slug"]}", :button_classes => "button hollow", :icon => "icon-play-circle", :icon_align => "left" }
+                            h2.headline-3 = webinar_entry["title"]
+                        .menu.simple
+                            li
+                                = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+                                span = webinar_entry['event_date'].strftime('%B %-d, %Y')
+                            - if webinar_entry.has_key?("discovery_topic")
+                                li
+                                    span.label.info.round = data.site.discover[webinar_entry.discovery_topic.id].title
 
+                        .preview-cta.headline-5.spaced-out.show-for-large Register now
+                        = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
+                        / img.thumbnail.float-left(src="#{thumb}?fit=scale&w=640" alt="webinar Preview")
+            .columns.small-12.medium-4.large-5
+                = Kramdown::Document.new(webinar_entry["summary"]).to_html
+                - if webinar_entry.has_key?("authors")
+                    aside.group
+                        p.text-italic Presented by
+                        - webinar_entry["authors"].each do | author |
+                            p
+                                = partial("partials/snippets/person-small", :locals => { :p => author })
 
-    .row.align-center
-        .columns.small-12.text-center.group
+    .row
+        .columns.small-12.group
             = partial "partials/snippets/button", :locals => { :label => "Learn more at the Datica Academy", :url => "/academy/", :button_classes => "button", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "white" }
+
+    /  == cards
+    / section.section-article.container-gray-11
+        .row.align-center.group
+            .columns.small-12.text-center
+                h2.headline-5.spaced-out Archived Webinars
+        .row.align-center.group.small-up-1.medium-up-2.xlarge-up-3
+            - sorted_entries[1...4].each do | id, webinar_entry |
+                - if webinar_entry.has_key?("image_thumb") ? thumb = webinar_entry.image_thumb.url : thumb = bg_default
+                .column
+                    .card.drop
+                        .card-section.container-gray-3.container-image-fill href="/webinars/#{webinar_entry["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
+                            .preview-title
+                                h3.headline-4.text-shadow = webinar_entry["title"]
+                                .menu.simple.margin-bottom-small.text--white.text-shadow
+                                    = partial "partials/cards/entry-meta", :locals => { :entry => webinar_entry }
+                        .card-section.text-small 
+                            = Kramdown::Document.new(webinar_entry["summary"]).to_html
+                            - if webinar_entry.has_key?("authors")
+                                aside.group
+                                    .pub-date.spaced-out Presented by
+                                    - webinar_entry["authors"].each do | author |
+                                        p
+                                            = partial("partials/snippets/person-small", :locals => { :p => author })
+                            = partial "partials/snippets/button", :locals => { :label => "Watch Webinar", :url => "/webinars/#{webinar_entry["slug"]}", :button_classes => "button hollow", :icon => "icon-webinar-sm", :icon_align => "left" }
+
+
