Partialized webinar card, for re-use. Added it to 'recent items' partial.

--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -82,6 +82,7 @@
 @import 'modules/content';
 @import 'modules/masonry';
 @import 'modules/people';
+@import 'modules/webinars';
 @import 'sitewide';
 
 // Import any vendors here
