--- a/source/assets/scss/modules/forms.scss
+++ b/source/assets/scss/modules/forms.scss
@@ -87,7 +87,7 @@ select{border: rem-calc(1px) solid $color_border;}
             width: rem-calc(98);
         }
         margin: 0 1rem 0 0;
-        padding-left: 1.7rem; // room for icon
+        padding-left: 2rem; // room for icon
         @include easing($timing-default);
         &:focus {
             @include breakpoint(large) {
@@ -96,6 +96,9 @@ select{border: rem-calc(1px) solid $color_border;}
             @include breakpoint(xlarge up) {
                 width: rem-calc(300);
             }
+            // .input-nav .input-nav--icon {
+            //     opacity: 1;
+            // }
         }
     }
     &--black {
@@ -140,6 +143,7 @@ select{border: rem-calc(1px) solid $color_border;}
         position: absolute;
         top: 0.4rem;
         z-index: 1;
+        opacity: 0.7;
     }
     &--white &--icon {
         color: white(0.8);
