--- a/source/platform/compliance/global.html.slim
+++ b/source/platform/compliance/global.html.slim
@@ -29,9 +29,9 @@ section.container-color--dark-grad-blue
     .row.align-center
       .columns.small-12.text-center.group
         .row.align-center
-          .columns.small-12.large-8
+          .columns.small-12.large-10
             h1.headline-2.text-center = current_page.data.title
-            p.lead.text-center Our <a class="link--yellow" href="/platform/roadmap" title="Datica public roadmap">public roadmap</a> gives customers and prospects full transparency into what we’re building. Read more about our decision to publish our product roadmap <a href="https://datica.com/blog/what-were-building-daticas-public-product-roadmap" class="link--yellow">here</a>.
+            p.lead.text-center Datica's stringent compliance posture makes us compliant with many global standards.
 
 section.section-article--med.container-gray-10
     / h2.headline-4.spaced-out.text-center.group.text--gray-6 Legend
@@ -44,6 +44,7 @@ section.section-article--med.container-gray-10
     .row.align-center
       #filter-table.columns.small-12.large-10
         .group.filter-search.input-nav.input-nav--black
+          = inline_svg("small/icon-filter-list", class: "input-nav--icon")
           / span class="input-nav--icon"><i class="fa fa-search"></i></span
           input.search type="search" id="searchInput" placeholder="Filter list"
         table width="100%" border="0"
