--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -41,7 +41,7 @@ ruby:
 .strip-bright.strip-bright--small
 .container-gray-11
     = partial "partials/head/header", :locals => { :style => "dark" }
-    section#webinar.section-article data-webinar = p.related_form.id
+    section#webinar.section-article data-webinar = p._meta.id
         .row.align-center
             .columns.small-12.large-6.text-center.group
                 = inline_svg("icon-webinar", class: "icon-size--large")
@@ -49,7 +49,7 @@ ruby:
                     a.link--dark href="/webinars" Datica Webinars
         .row.align-middle.group--2x
             .columns.small-12.medium-6.xlarge-6
-                .preview.container-gray-3.container-image-fill href="/webinars/#{p["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
+                #webinar-preview.preview.container-gray-3.container-image-fill href="/webinars/#{p["slug"]}" title=("View webinar") data-interchange="[#{thumb}, small]"
                     div.preview-subhead Datica Webinar
                     h2.headline-3.nomargin = p["title"]
                     p.text-italic = (p.has_key?("subhead") ? p.subhead : nil)
@@ -60,6 +60,9 @@ ruby:
                         - if p.has_key?("discovery_topic")
                             li
                                 span.label.info.round = data.site.discover[p.discovery_topic.id].title
+                #webinar-play.hide
+                    h2 Play this thing
+
             .columns.small-12.medium-6
                 - if p.has_key?("authors")
                     aside.group
@@ -69,11 +72,12 @@ ruby:
                                 = partial("partials/snippets/person", :locals => { :p => author })
 
         .row
-            #report-form.columns.small-12.large-4.large-offset-2
+            .columns.small-12.large-4.large-offset-2
                 - if p.has_key?("related_form")
-                    .callout.drop
-                        h3.headline-4.text-center.group Watch the webinar
-                        = Kramdown::Document.new(data.site.forms[p.related_form.id].custom_form).to_html
+                    #report-form
+                        .callout.drop
+                            h3.headline-4.text-center.group Watch the webinar
+                            = Kramdown::Document.new(data.site.forms[p.related_form.id].custom_form).to_html
             .columns.small-12.large-5
                 - if p.has_key?("lead")
                     .lead
