--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -4,6 +4,7 @@ summary: "In-depth presenations on the latest compliance challenges"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, kubernetes"
 layout: basic
+customJS: "/public/js/webinar.js"
 ---
 ruby:
     today = DateTime.now
